--- a/Formatting with .format().ipynb
+++ b/Formatting with .format().ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "425a03f2",
+   "id": "d3f9fb16",
    "metadata": {},
    "source": [
     "# 'String here{} then also {}'.format('something1','something2')"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "69dd8e8b",
+   "id": "3c04890f",
    "metadata": {},
    "outputs": [
     {
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "330f3113",
+   "id": "a3317814",
    "metadata": {},
    "outputs": [
     {
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "89491bb7",
+   "id": "05186caa",
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "4101cb14",
+   "id": "b6e49880",
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "e8534807",
+   "id": "7705039a",
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0e71d00e",
+   "id": "e87d5f4b",
    "metadata": {},
    "source": [
     "# Float formatting \"{value:width.precision f}\""
@@ -109,7 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "0291447d",
+   "id": "d6708486",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "917d0e9d",
+   "id": "d31962ab",
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "205d47d8",
+   "id": "62bc99be",
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2caf8661",
+   "id": "1b27fc91",
    "metadata": {},
    "source": [
     "# f'strings'"
@@ -166,7 +166,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "abf600e1",
+   "id": "10fa162d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "69dabf00",
+   "id": "835f6992",
    "metadata": {},
    "outputs": [
     {
@@ -194,8 +194,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 17,
+   "id": "3a929d37",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Adnan is like a 5 year old\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"{name} is like a {age} year old\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "94743404",
+   "id": "5b1abfe2",
    "metadata": {},
    "outputs": [],
    "source": []
