--- a/Import CSV.ipynb
+++ b/Import CSV.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "id": "af8fbea2",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 3,
    "id": "dd12083c",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 4,
    "id": "5de4c00b",
    "metadata": {},
    "outputs": [],
@@ -51,29 +51,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 8,
    "id": "e25ba070",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'numpy.ndarray'>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# reformat it into a python object list\n",
     "data_lines = list(csv_data)\n",
+    "# first part of the URL is constant\n",
     "base = \"https://tado.vanillacommunities.com/de/discussion/\"\n",
     "data_array = np.array(data_lines)\n",
-    "print(type(data_array))"
+    "#print(type(data_array))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 6,
    "id": "d7c75c25",
    "metadata": {},
    "outputs": [
@@ -83,12 +76,13 @@
        "137"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# count of IDs\n",
     "len(data_lines)"
    ]
   },
@@ -243,6 +237,7 @@
     }
    ],
    "source": [
+    "# access to each IDs one by one\n",
     "for line in data_lines:\n",
     "    main_url=base+str(line).replace(\"'\",\"\").replace(\"[\",\"\").replace(\"]\",\"\")\n",
     "#     html = urlopen(str(main_url))\n",
@@ -254,74 +249,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "id": "38ad15dd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "item4 = []"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 39,
    "id": "8c3d3f31",
    "metadata": {},
    "outputs": [],
    "source": [
-    "for line in data_lines[0:5]:\n",
-    "    item4.append(line[3])"
+    "#for line in data_lines[0:5]:\n",
+    "#    item4.append(line[3])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "id": "d2b5981e",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['40', '40', '40', '50', 'Title 4', '40', '40', '40', '50']"
-      ]
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "item4"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "id": "802f7ee8",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['C', '10', '30', '40', '50']"
-      ]
-     },
-     "execution_count": 42,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data_lines[3]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6a7f43d0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
