api calls for json file

--- a/Import CSV.ipynb
+++ b/Import CSV.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 32,
    "id": "af8fbea2",
    "metadata": {},
    "outputs": [],
@@ -24,12 +24,13 @@
     "%matplotlib inline\n",
     "from urllib.request import urlopen\n",
     "from bs4 import BeautifulSoup\n",
+    "#import selenium\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 33,
    "id": "dd12083c",
    "metadata": {},
    "outputs": [],
@@ -40,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 34,
    "id": "5de4c00b",
    "metadata": {},
    "outputs": [],
@@ -51,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 35,
    "id": "e25ba070",
    "metadata": {},
    "outputs": [],
@@ -59,14 +60,14 @@
     "# reformat it into a python object list\n",
     "data_lines = list(csv_data)\n",
     "# first part of the URL is constant\n",
-    "base = \"https://tado.vanillacommunities.com/de/discussion/\"\n",
+    "base = \"https://tado.com/\"\n",
     "data_array = np.array(data_lines)\n",
     "#print(type(data_array))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 36,
    "id": "d7c75c25",
    "metadata": {},
    "outputs": [
@@ -76,7 +77,7 @@
        "137"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -88,163 +89,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 37,
    "id": "9a2d00c6",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "https://tado.vanillacommunities.com/de/discussion/458\n",
-      "https://tado.vanillacommunities.com/de/discussion/1736\n",
-      "https://tado.vanillacommunities.com/de/discussion/724\n",
-      "https://tado.vanillacommunities.com/de/discussion/282\n",
-      "https://tado.vanillacommunities.com/de/discussion/1413\n",
-      "https://tado.vanillacommunities.com/de/discussion/729\n",
-      "https://tado.vanillacommunities.com/de/discussion/2741\n",
-      "https://tado.vanillacommunities.com/de/discussion/1140\n",
-      "https://tado.vanillacommunities.com/de/discussion/3832\n",
-      "https://tado.vanillacommunities.com/de/discussion/2162\n",
-      "https://tado.vanillacommunities.com/de/discussion/3561\n",
-      "https://tado.vanillacommunities.com/de/discussion/1166\n",
-      "https://tado.vanillacommunities.com/de/discussion/2315\n",
-      "https://tado.vanillacommunities.com/de/discussion/316\n",
-      "https://tado.vanillacommunities.com/de/discussion/8607\n",
-      "https://tado.vanillacommunities.com/de/discussion/1909\n",
-      "https://tado.vanillacommunities.com/de/discussion/1860\n",
-      "https://tado.vanillacommunities.com/de/discussion/387\n",
-      "https://tado.vanillacommunities.com/de/discussion/3404\n",
-      "https://tado.vanillacommunities.com/de/discussion/1415\n",
-      "https://tado.vanillacommunities.com/de/discussion/721\n",
-      "https://tado.vanillacommunities.com/de/discussion/616\n",
-      "https://tado.vanillacommunities.com/de/discussion/464\n",
-      "https://tado.vanillacommunities.com/de/discussion/4783\n",
-      "https://tado.vanillacommunities.com/de/discussion/850\n",
-      "https://tado.vanillacommunities.com/de/discussion/6\n",
-      "https://tado.vanillacommunities.com/de/discussion/441\n",
-      "https://tado.vanillacommunities.com/de/discussion/1377\n",
-      "https://tado.vanillacommunities.com/de/discussion/541\n",
-      "https://tado.vanillacommunities.com/de/discussion/2515\n",
-      "https://tado.vanillacommunities.com/de/discussion/457\n",
-      "https://tado.vanillacommunities.com/de/discussion/437\n",
-      "https://tado.vanillacommunities.com/de/discussion/8235\n",
-      "https://tado.vanillacommunities.com/de/discussion/2142\n",
-      "https://tado.vanillacommunities.com/de/discussion/1232\n",
-      "https://tado.vanillacommunities.com/de/discussion/3984\n",
-      "https://tado.vanillacommunities.com/de/discussion/4325\n",
-      "https://tado.vanillacommunities.com/de/discussion/818\n",
-      "https://tado.vanillacommunities.com/de/discussion/7040\n",
-      "https://tado.vanillacommunities.com/de/discussion/646\n",
-      "https://tado.vanillacommunities.com/de/discussion/1264\n",
-      "https://tado.vanillacommunities.com/de/discussion/1796\n",
-      "https://tado.vanillacommunities.com/de/discussion/1332\n",
-      "https://tado.vanillacommunities.com/de/discussion/443\n",
-      "https://tado.vanillacommunities.com/de/discussion/473\n",
-      "https://tado.vanillacommunities.com/de/discussion/1200\n",
-      "https://tado.vanillacommunities.com/de/discussion/4652\n",
-      "https://tado.vanillacommunities.com/de/discussion/3875\n",
-      "https://tado.vanillacommunities.com/de/discussion/550\n",
-      "https://tado.vanillacommunities.com/de/discussion/438\n",
-      "https://tado.vanillacommunities.com/de/discussion/1258\n",
-      "https://tado.vanillacommunities.com/de/discussion/1896\n",
-      "https://tado.vanillacommunities.com/de/discussion/2760\n",
-      "https://tado.vanillacommunities.com/de/discussion/2970\n",
-      "https://tado.vanillacommunities.com/de/discussion/4814\n",
-      "https://tado.vanillacommunities.com/de/discussion/1893\n",
-      "https://tado.vanillacommunities.com/de/discussion/4828\n",
-      "https://tado.vanillacommunities.com/de/discussion/3702\n",
-      "https://tado.vanillacommunities.com/de/discussion/592\n",
-      "https://tado.vanillacommunities.com/de/discussion/617\n",
-      "https://tado.vanillacommunities.com/de/discussion/1256\n",
-      "https://tado.vanillacommunities.com/de/discussion/2729\n",
-      "https://tado.vanillacommunities.com/de/discussion/3610\n",
-      "https://tado.vanillacommunities.com/de/discussion/2424\n",
-      "https://tado.vanillacommunities.com/de/discussion/7405\n",
-      "https://tado.vanillacommunities.com/de/discussion/4865\n",
-      "https://tado.vanillacommunities.com/de/discussion/11041\n",
-      "https://tado.vanillacommunities.com/de/discussion/2769\n",
-      "https://tado.vanillacommunities.com/de/discussion/4502\n",
-      "https://tado.vanillacommunities.com/de/discussion/1791\n",
-      "https://tado.vanillacommunities.com/de/discussion/10951\n",
-      "https://tado.vanillacommunities.com/de/discussion/3162\n",
-      "https://tado.vanillacommunities.com/de/discussion/1944\n",
-      "https://tado.vanillacommunities.com/de/discussion/1973\n",
-      "https://tado.vanillacommunities.com/de/discussion/1795\n",
-      "https://tado.vanillacommunities.com/de/discussion/1175\n",
-      "https://tado.vanillacommunities.com/de/discussion/472\n",
-      "https://tado.vanillacommunities.com/de/discussion/3649\n",
-      "https://tado.vanillacommunities.com/de/discussion/4391\n",
-      "https://tado.vanillacommunities.com/de/discussion/7300\n",
-      "https://tado.vanillacommunities.com/de/discussion/5319\n",
-      "https://tado.vanillacommunities.com/de/discussion/775\n",
-      "https://tado.vanillacommunities.com/de/discussion/3505\n",
-      "https://tado.vanillacommunities.com/de/discussion/7299\n",
-      "https://tado.vanillacommunities.com/de/discussion/2715\n",
-      "https://tado.vanillacommunities.com/de/discussion/180\n",
-      "https://tado.vanillacommunities.com/de/discussion/3039\n",
-      "https://tado.vanillacommunities.com/de/discussion/4887\n",
-      "https://tado.vanillacommunities.com/de/discussion/7262\n",
-      "https://tado.vanillacommunities.com/de/discussion/5878\n",
-      "https://tado.vanillacommunities.com/de/discussion/909\n",
-      "https://tado.vanillacommunities.com/de/discussion/2331\n",
-      "https://tado.vanillacommunities.com/de/discussion/3126\n",
-      "https://tado.vanillacommunities.com/de/discussion/3437\n",
-      "https://tado.vanillacommunities.com/de/discussion/4642\n",
-      "https://tado.vanillacommunities.com/de/discussion/3528\n",
-      "https://tado.vanillacommunities.com/de/discussion/749\n",
-      "https://tado.vanillacommunities.com/de/discussion/1932\n",
-      "https://tado.vanillacommunities.com/de/discussion/3451\n",
-      "https://tado.vanillacommunities.com/de/discussion/408\n",
-      "https://tado.vanillacommunities.com/de/discussion/1966\n",
-      "https://tado.vanillacommunities.com/de/discussion/1753\n",
-      "https://tado.vanillacommunities.com/de/discussion/1007\n",
-      "https://tado.vanillacommunities.com/de/discussion/225\n",
-      "https://tado.vanillacommunities.com/de/discussion/1501\n",
-      "https://tado.vanillacommunities.com/de/discussion/2359\n",
-      "https://tado.vanillacommunities.com/de/discussion/3322\n",
-      "https://tado.vanillacommunities.com/de/discussion/2998\n",
-      "https://tado.vanillacommunities.com/de/discussion/2214\n",
-      "https://tado.vanillacommunities.com/de/discussion/2043\n",
-      "https://tado.vanillacommunities.com/de/discussion/2479\n",
-      "https://tado.vanillacommunities.com/de/discussion/334\n",
-      "https://tado.vanillacommunities.com/de/discussion/2575\n",
-      "https://tado.vanillacommunities.com/de/discussion/10757\n",
-      "https://tado.vanillacommunities.com/de/discussion/1181\n",
-      "https://tado.vanillacommunities.com/de/discussion/1369\n",
-      "https://tado.vanillacommunities.com/de/discussion/6034\n",
-      "https://tado.vanillacommunities.com/de/discussion/26\n",
-      "https://tado.vanillacommunities.com/de/discussion/520\n",
-      "https://tado.vanillacommunities.com/de/discussion/345\n",
-      "https://tado.vanillacommunities.com/de/discussion/336\n",
-      "https://tado.vanillacommunities.com/de/discussion/242\n",
-      "https://tado.vanillacommunities.com/de/discussion/504\n",
-      "https://tado.vanillacommunities.com/de/discussion/615\n",
-      "https://tado.vanillacommunities.com/de/discussion/321\n",
-      "https://tado.vanillacommunities.com/de/discussion/2818\n",
-      "https://tado.vanillacommunities.com/de/discussion/7889\n",
-      "https://tado.vanillacommunities.com/de/discussion/243\n",
-      "https://tado.vanillacommunities.com/de/discussion/8677\n",
-      "https://tado.vanillacommunities.com/de/discussion/5185\n",
-      "https://tado.vanillacommunities.com/de/discussion/5925\n",
-      "https://tado.vanillacommunities.com/de/discussion/1017\n",
-      "https://tado.vanillacommunities.com/de/discussion/390\n",
-      "https://tado.vanillacommunities.com/de/discussion/4170\n",
-      "https://tado.vanillacommunities.com/de/discussion/2824\n",
-      "https://tado.vanillacommunities.com/de/discussion/1154\n",
-      "https://tado.vanillacommunities.com/de/discussion/3333\n"
+     "ename": "IndentationError",
+     "evalue": "unexpected indent (2052627922.py, line 4)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Input \u001b[1;32mIn [37]\u001b[1;36m\u001b[0m\n\u001b[1;33m    url = str(base)\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m unexpected indent\n"
      ]
     }
    ],
    "source": [
     "# access to each IDs one by one\n",
-    "for line in data_lines:\n",
-    "    main_url=base+str(line).replace(\"'\",\"\").replace(\"[\",\"\").replace(\"]\",\"\")\n",
-    "#     html = urlopen(str(main_url))\n",
+    "#for line in data_lines:\n",
+    "  #  main_url=base+str(line).replace(\"'\",\"\").replace(\"[\",\"\").replace(\"]\",\"\")\n",
+    "    url = str(base)\n",
+    "    \n",
+    "    html = urlopen(url)\n",
     "#     soup = BeautifulSoup(html, 'lxml')\n",
     "#     type(soup)\n",
     "    \n",
-    "    print(str(main_url))"
+    "    \n",
+    "#    print(str(main_url))"
    ]
   },
   {
