--- a/Forum score.ipynb
+++ b/Forum score.ipynb
@@ -256,27 +256,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 51,
    "id": "8c3d3f31",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response = requests.get(\"https://community.tado.com/api/v2/discussions/458\")\n",
+    "data = response.json()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "d5c801b0",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'discussionID': 458, 'type': 'idea', 'name': 'echter Fensterkontakt', 'body': '<p>In einem Raum mit mehreren Heizkörpern, Fenstern und einer Balkontür wird die Temperatur nicht über den Heizköperthermostat (HKT) sondern über die smarten Themostaten (ST) gemessen. Was übrigens für eine bessereres und gleichmässigeres Heizprofil sorgt, als wenn die Temperatur über den HKT gemessen wird. Die \"Fenster-offen-Funktion\" wird in diesem Raum nie ausgelößt, wenn ich die Balkontür zum lüften aufmache. Der ST ist wohl zu weit weg und somit der Temperaturabfall nicht stark genug. Das ist übrigens auch im Bad so, wo der Wand-Heizkörper nicht am Fenster ist. </p><p>Ich fände es daher toll, wenn Tado ähnlich wie andere Anbieter eigene Fensterkontakte für eine sicherere \"Fenster-offen-Erkennung\" anbieten würde, die dann die entsprechenden Heizkörper auch nur solange ausschaltet, wie das Fenster offen ist.</p>', 'categoryID': 41, 'dateInserted': '2019-02-25T10:35:52+00:00', 'dateUpdated': None, 'dateLastComment': '2022-09-17T20:19:00+00:00', 'insertUserID': 351, 'insertUser': {'userID': 351, 'name': 'blnklaus', 'url': 'https://community.tado.com/profile/blnklaus', 'photoUrl': 'https://secure.gravatar.com/avatar/9975392651b9d64e5f178841e20c0070/?default=https%3A%2F%2Fvanillicon.com%2F8b999f3486d0af1bda9e12696679f16c_200.png&rating=g&size=200', 'dateLastActive': '2021-10-27T13:05:45+00:00', 'banned': 0, 'punished': 0, 'private': False, 'label': '✭✭✭'}, 'updateUserID': None, 'lastUserID': 33155, 'lastUser': {'userID': 33155, 'name': 'hdjdlebdk', 'url': 'https://community.tado.com/profile/hdjdlebdk', 'photoUrl': 'https://secure.gravatar.com/avatar/58c621eb1af622770ae08ac51eb0514a/?default=https%3A%2F%2Fvanillicon.com%2Fb3722e1219246febd54af7d547521dc5_200.png&rating=g&size=200', 'dateLastActive': '2022-09-17T20:14:56+00:00', 'banned': 0, 'punished': 0, 'private': False, 'label': '✭'}, 'pinned': False, 'pinLocation': None, 'closed': False, 'sink': False, 'countComments': 201, 'countViews': 27915, 'score': 259, 'hot': 3214735192, 'url': 'https://community.tado.com/de/discussion/458/echter-fensterkontakt', 'canonicalUrl': 'https://community.tado.com/de/discussion/458/echter-fensterkontakt', 'format': 'Rich', 'groupID': None, 'statusID': 10000, 'attributes': {'idea': {'statusNotes': None, 'statusID': 10000, 'status': {'name': 'Active', 'state': 'open'}, 'type': 'up'}}, 'bookmarked': False, 'unread': False}\n"
-     ]
+     "data": {
+      "text/plain": [
+       "259"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "response = requests.get(\"https://community.tado.com/api/v2/discussions/458\")\n",
-    "print(response.json())"
+    "data['score']"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c32041ad",
+   "id": "6967b2e3",
    "metadata": {},
    "outputs": [],
    "source": []
