--- a/Forum score.ipynb
+++ b/Forum score.ipynb
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 67,
    "id": "9a2d00c6",
    "metadata": {},
    "outputs": [
@@ -100,149 +100,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://tado.vanillacommunities.com/api/v2/discussion/458\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/1736\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/724\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/282\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/1413\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/729\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/2741\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/1140\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/3832\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/2162\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/3561\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/1166\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/2315\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/316\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/8607\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/1909\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/1860\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/387\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/3404\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/1415\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/721\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/616\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/464\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/4783\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/850\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/6\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/441\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/1377\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/541\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/2515\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/457\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/437\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/8235\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/2142\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/1232\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/3984\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/4325\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/818\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/7040\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/646\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/1264\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/1796\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/1332\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/443\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/473\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/1200\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/4652\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/3875\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/550\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/438\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/1258\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/1896\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/2760\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/2970\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/4814\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/1893\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/4828\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/3702\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/592\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/617\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/1256\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/2729\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/3610\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/2424\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/7405\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/4865\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/11041\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/2769\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/4502\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/1791\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/10951\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/3162\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/1944\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/1973\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/1795\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/1175\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/472\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/3649\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/4391\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/7300\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/5319\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/775\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/3505\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/7299\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/2715\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/180\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/3039\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/4887\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/7262\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/5878\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/909\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/2331\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/3126\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/3437\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/4642\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/3528\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/749\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/1932\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/3451\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/408\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/1966\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/1753\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/1007\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/225\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/1501\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/2359\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/3322\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/2998\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/2214\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/2043\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/2479\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/334\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/2575\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/10757\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/1181\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/1369\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/6034\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/26\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/520\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/345\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/336\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/242\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/504\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/615\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/321\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/2818\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/7889\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/243\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/8677\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/5185\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/5925\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/1017\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/390\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/4170\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/2824\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/1154\n",
-      "https://tado.vanillacommunities.com/api/v2/discussion/3333\n"
+      "https://tado.vanillacommunities.com/api/v2/discussion/729\n"
      ]
     }
    ],
    "source": [
     "# access to each IDs one by one\n",
-    "for line in data_lines:\n",
+    "for line in data_lines[05]:\n",
     "    main_url=base+str(line).replace(\"'\",\"\").replace(\"[\",\"\").replace(\"]\",\"\")\n",
     "    url = str(base)\n",
     "    \n",
@@ -256,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 63,
    "id": "8c3d3f31",
    "metadata": {},
    "outputs": [],
@@ -268,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "d5c801b0",
+   "id": "b2cae942",
    "metadata": {},
    "outputs": [
     {
@@ -288,8 +152,50 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 57,
+   "id": "84281448",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s = \"https://community.tado.com/api/v2/discussions/458\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "5a596d92",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response = requests.get(s)\n",
+    "datab = response.json()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "d6164bf8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "259"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "datab['score']"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "6967b2e3",
+   "id": "ec9ded30",
    "metadata": {},
    "outputs": [],
    "source": []
