--- a/Forum score.ipynb
+++ b/Forum score.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 101,
    "id": "af8fbea2",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 102,
    "id": "dd12083c",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 103,
    "id": "5de4c00b",
    "metadata": {},
    "outputs": [],
@@ -55,22 +55,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 104,
    "id": "e25ba070",
    "metadata": {},
    "outputs": [],
    "source": [
     "# reformat it into a python object list\n",
-    "data_lines = list(csv_data)\n",
+    "id_list = list(csv_data)\n",
     "# first part of the URL is constant\n",
-    "base = \"https://tado.vanillacommunities.com/api/v2/discussion/\"\n",
-    "data_array = np.array(data_lines)\n",
+    "base = \"https://community.tado.com/api/v2/discussions/\"\n",
+    "data_array = np.array(id_list)\n",
     "#print(type(data_array))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 105,
    "id": "d7c75c25",
    "metadata": {},
    "outputs": [
@@ -80,19 +80,19 @@
        "137"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# count of IDs\n",
-    "len(data_lines)"
+    "len(id_list)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 112,
    "id": "9a2d00c6",
    "metadata": {},
    "outputs": [
@@ -100,48 +100,66 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://tado.vanillacommunities.com/api/v2/discussion/729\n"
+      "259\n",
+      "220\n",
+      "206\n",
+      "162\n",
+      "123\n",
+      "191\n",
+      "67\n",
+      "70\n",
+      "61\n",
+      "56\n",
+      "52\n",
+      "48\n",
+      "44\n",
+      "39\n",
+      "46\n",
+      "41\n",
+      "35\n",
+      "35\n",
+      "32\n",
+      "22\n"
      ]
     }
    ],
    "source": [
     "# access to each IDs one by one\n",
-    "for line in data_lines[05]:\n",
-    "    main_url=base+str(line).replace(\"'\",\"\").replace(\"[\",\"\").replace(\"]\",\"\")\n",
+    "for line in id_list[:20]:\n",
+    "    main_url = base + str(line).replace(\"'\",\"\").replace(\"[\",\"\").replace(\"]\",\"\").replace(\"'\",\"\")\n",
     "    url = str(base)\n",
     "    \n",
-    "#    html = urlopen(url)\n",
-    "#     soup = BeautifulSoup(html, 'lxml')\n",
-    "#     type(soup)\n",
+    "    response = requests.get(main_url)\n",
+    "    data = response.json()\n",
     "    \n",
     "    \n",
-    "    print(str(main_url))"
+    "    print(str(data['score']))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 107,
    "id": "8c3d3f31",
    "metadata": {},
    "outputs": [],
    "source": [
-    "response = requests.get(\"https://community.tado.com/api/v2/discussions/458\")\n",
+    "response = requests.get(main_url)\n",
     "data = response.json()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "id": "b2cae942",
+   "execution_count": 108,
+   "id": "b0bbd684",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "259"
+       "123"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,7 +171,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "84281448",
+   "id": "9f0ce1e4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,28 +180,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
-   "id": "5a596d92",
+   "execution_count": 96,
+   "id": "6a37c062",
    "metadata": {},
    "outputs": [],
    "source": [
-    "response = requests.get(s)\n",
+    "response = requests.get(main_url)\n",
     "datab = response.json()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
-   "id": "d6164bf8",
+   "execution_count": 98,
+   "id": "28cbd86f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "259"
+       "123"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,8 +212,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 95,
+   "id": "2f203fda",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'https://community.tado.com/api/v2/discussions/1413'"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "main_url"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "ec9ded30",
+   "id": "f21c6c62",
    "metadata": {},
    "outputs": [],
    "source": []
