--- a/Forum score-Copy1.ipynb
+++ b/Forum score-Copy1.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 284,
+   "execution_count": 6,
    "id": "af8fbea2",
    "metadata": {},
    "outputs": [
@@ -22,139 +22,7 @@
       "220\n",
       "206\n",
       "162\n",
-      "123\n",
-      "191\n",
-      "67\n",
-      "70\n",
-      "61\n",
-      "56\n",
-      "52\n",
-      "48\n",
-      "44\n",
-      "39\n",
-      "46\n",
-      "41\n",
-      "35\n",
-      "35\n",
-      "32\n",
-      "22\n",
-      "21\n",
-      "18\n",
-      "400\n",
-      "297\n",
-      "201\n",
-      "188\n",
-      "153\n",
-      "170\n",
-      "140\n",
-      "148\n",
-      "124\n",
-      "112\n",
-      "100\n",
-      "96\n",
-      "100\n",
-      "106\n",
-      "94\n",
-      "78\n",
-      "73\n",
-      "71\n",
-      "77\n",
-      "65\n",
-      "61\n",
-      "60\n",
-      "62\n",
-      "60\n",
-      "62\n",
-      "55\n",
-      "47\n",
-      "43\n",
-      "39\n",
-      "28\n",
-      "27\n",
-      "22\n",
-      "21\n",
-      "15\n",
-      "15\n",
-      "10\n",
-      "8\n",
-      "7\n",
-      "9\n",
-      "7\n",
-      "7\n",
-      "5\n",
-      "5\n",
-      "5\n",
-      "5\n",
-      "4\n",
-      "4\n",
-      "4\n",
-      "4\n",
-      "4\n",
-      "3\n",
-      "44\n",
-      "34\n",
-      "18\n",
-      "18\n",
-      "17\n",
-      "17\n",
-      "17\n",
-      "15\n",
-      "15\n",
-      "13\n",
-      "13\n",
-      "12\n",
-      "11\n",
-      "8\n",
-      "8\n",
-      "7\n",
-      "6\n",
-      "5\n",
-      "5\n",
-      "5\n",
-      "7\n",
-      "5\n",
-      "5\n",
-      "97\n",
-      "39\n",
-      "40\n",
-      "33\n",
-      "8\n",
-      "25\n",
-      "25\n",
-      "20\n",
-      "18\n",
-      "19\n",
-      "15\n",
-      "14\n",
-      "9\n",
-      "8\n",
-      "8\n",
-      "8\n",
-      "9\n",
-      "11\n",
-      "7\n",
-      "6\n",
-      "134\n",
-      "122\n",
-      "120\n",
-      "75\n",
-      "64\n",
-      "60\n",
-      "54\n",
-      "61\n",
-      "50\n",
-      "44\n",
-      "48\n",
-      "41\n",
-      "34\n",
-      "33\n",
-      "25\n",
-      "26\n",
-      "24\n",
-      "21\n",
-      "21\n",
-      "19\n",
-      "16\n"
+      "123\n"
      ]
     }
    ],
@@ -183,7 +51,7 @@
     "\n",
     "# access to each IDs one by one\n",
     "\n",
-    "for line in id_list[0:]:\n",
+    "for line in id_list[:5]:\n",
     "    main_url = base + str(line).replace(\"'\",\"\").replace(\"[\",\"\").replace(\"]\",\"\").replace(\"'\",\"\")\n",
     "    url = str(base)\n",
     "    \n",
@@ -204,14 +72,6 @@
     "        writer_obj.writerow(a)\n",
     "    f_obj.close()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6f69cbfd",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
