--- a/Forum_score.ipynb
+++ b/Forum_score.ipynb
@@ -10,22 +10,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 297,
+   "execution_count": null,
    "id": "af8fbea2",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[259, 'echter Fensterkontakt', 'https://community.tado.com/de/discussion/458/echter-fensterkontakt']\n",
-      "[220, 'Benutzerabhängiger Away-Modus', 'https://community.tado.com/de/discussion/1736/benutzerabhaengiger-away-modus']\n",
-      "[206, 'Sommerbetrieb', 'https://community.tado.com/de/discussion/724/sommerbetrieb']\n",
-      "[162, 'Schichtbetrieb - Ich möchte gerne mehr als nur einen Zeitplan hinterlegen.', 'https://community.tado.com/de/discussion/282/schichtbetrieb-ich-moechte-gerne-mehr-als-nur-einen-zeitplan-hinterlegen']\n",
-      "[123, 'Signalverstärker/Repeater - Funkreichweite erhöhen Thermostate/ Bridge', 'https://community.tado.com/de/discussion/1413/signalverstaerker-repeater-funkreichweite-erhoehen-thermostate-bridge']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas\n",
@@ -61,7 +49,7 @@
     "#    print(str(data['score']))\n",
     "    single_score = []\n",
     "    single_score.append(data['score'])\n",
-    "    score.append([data['score'],data['name'],data[r'url']])\n",
+    "    score.append([data['name'],data['score'],data[r'url']])\n",
     "    \n",
     "\n",
     "from csv import writer\n",
@@ -78,7 +66,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21945959",
+   "id": "b91cfc43",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f05ce1a2",
    "metadata": {},
    "outputs": [],
    "source": []
